--- a/.github/workflows/lily58m.yml
+++ b/.github/workflows/lily58m.yml
@@ -10,3 +10,4 @@ jobs:
     with:
       board: '["nice_nano_v2"]'
       shield: '["lily58_left","lily58_right"]'
+      snippet: '["zmk-usb-logging"]'
